--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,13 @@
 
-<nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg align-items-center">
+    <div class="container-fluid ">
       <a class="navbar-brand" href="#">To-Do App</a>
-      <ul appDropdown>
-        <a href="#" class="dropdown-toggler" type="button" role="button" >
-            <span class="navbar-toggler-icon"></span>
-        </a>
-        <ul class="dropdown-menu">
-            <li><a class="nav-link active"href="#" (click)="onSelected('todo')">ToDos</a></li>
-        </ul>
-      </ul>
-   
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+      <div class="navbar-collapse ">
+        <ul class="navbar-nav mx-auto order-0">
+          <li class="nav-item px-5 border">
             <a class="nav-link active"href="#" (click)="onSelected('todo')">ToDos</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item px-5 border">
             <a class="nav-link" href="#" (click)="onSelected('detail')">Details</a>
           </li>
         </ul>
