--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -8,8 +8,7 @@
   
               <form class="d-flex justify-content-center align-items-center mb-4">
                 <div class="form-outline flex-fill">
-                  <input type="text" id="form2" class="form-control" />
-                  <label class="form-label" for="form2">New task...</label>
+                  <input type="text" id="form2" class="form-control" placeholder="New Task..."/>
                 </div>
                  <button type="submit" class="btn btn-info ms-2 mt-0">Add</button>
               </form>
