--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,13 +2,13 @@
 <nav class="navbar navbar-expand-lg align-items-center">
     <div class="container-fluid ">
       <a class="navbar-brand" href="#">To-Do App</a>
-      <div class="navbar-collapse ">
-        <ul class="navbar-nav mx-auto order-0">
-          <li class="nav-item px-5 border">
-            <a class="nav-link active"href="#" (click)="onSelected('todo')">ToDos</a>
+      <div class="navbar-collapse collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active"href="#" (click)="onSelected('todo')">ToDos Page</a>
           </li>
-          <li class="nav-item px-5 border">
-            <a class="nav-link" href="#" (click)="onSelected('detail')">Details</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#" (click)="onSelected('detail')">Details Page</a>
           </li>
         </ul>
       </div>
