add taskInput from user

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -8,9 +8,9 @@
   
               <form class="d-flex justify-content-center align-items-center mb-4">
                 <div class="form-outline flex-fill">
-                  <input type="text" id="form2" class="form-control" placeholder="New Task..."/>
+                  <input type="text" id="form2" class="form-control" placeholder="New Task..." #taskInput/>
                 </div>
-                 <button type="submit" class="btn btn-info ms-2 mt-0">Add</button>
+                 <button type="submit" class="btn btn-info ms-2 mt-0" (click)="onAddTask()">Add</button>
               </form>
   
               <!-- Tabs navs -->
@@ -34,73 +34,23 @@
               <div class="tab-content" id="ex1-content">
                 <div class="tab-pane fade show active" id="ex1-tabs-1" role="tabpanel"
                   aria-labelledby="ex1-tab-1">
-                  <ul class="list-group mb-0">
-                    <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
+                  <ul class="list-group mb-0" *ngFor="let todo of taskList">
+                    <!-- <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                       style="background-color: #f4f6f7;">
                       <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." checked />
-                      <s>Cras justo odio</s>
-                    </li>
-                    <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." checked />
-                      <s>Dapibus ac facilisis in</s>
-                    </li>
+                      Cras justo odio
+                    </li> -->
                     <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                       style="background-color: #f4f6f7;">
                       <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      Morbi leo risus
-                    </li>
-                    <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      Porta ac consectetur ac
-                    </li>
-                    <li class="list-group-item d-flex align-items-center border-0 mb-0 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      Vestibulum at eros
-                    </li>
-                  </ul>
-                </div>
-                <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
-                  <ul class="list-group mb-0">
-                    <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      Morbi leo risus
-                    </li>
-                    <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      Porta ac consectetur ac
-                    </li>
-                    <li class="list-group-item d-flex align-items-center border-0 mb-0 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
-                      Vestibulum at eros
-                    </li>
-                  </ul>
-                </div>
-                <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
-                  <ul class="list-group mb-0">
-                    <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." checked />
-                      <s>Cras justo odio</s>
-                    </li>
-                    <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." checked />
-                      <s>Dapibus ac facilisis in</s>
+                      {{todo}}
                     </li>
                   </ul>
                 </div>
               </div>
               <!-- Tabs content -->
-  
             </div>
           </div>
-  
         </div>
       </div>
     </div>
