add tasks to the list

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -41,8 +41,8 @@
                       Cras justo odio
                     </li> -->
                     <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
-                      style="background-color: #f4f6f7;">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
+                      style="background-color: grey">
+                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." (change)="addToActive(todo, $event.target.checked)"/>
                       {{todo}}
                     </li>
                   </ul>
