changed Active to Completed list

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -42,7 +42,7 @@
                     </li> -->
                     <li class="list-group-item d-flex align-items-center border-0 mb-2 rounded"
                       style="background-color: grey">
-                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." (change)="addToActive(todo, $event.target.checked)"/>
+                      <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." (change)="addToCompleted(todo, $event.target.checked)"/>
                       {{todo}}
                     </li>
                   </ul>
